--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "**/.client/**/*.tsx"
   ],
   "compilerOptions": {
+    "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["@remix-run/node", "vite/client"],
     "isolatedModules": true,
@@ -16,7 +17,6 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
-    "target": "ES2022",
     "strict": true,
     "allowJs": true,
     "skipLibCheck": true,
